fix(button): spacing and box-sizing.

--- a/postcss/button.css
+++ b/postcss/button.css
@@ -16,6 +16,7 @@
   border: 1px solid transparent;
   display: flex;
   align-items: center;
+  box-sizing: content-box;
 }
 
 .button:hover {
